// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createMutationFile > mutation-basic (no body, no params) > produces the correct output 1`] = `
"// ------------------------------
// Auto-generated mutation file for POST /users
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { useMutation, UseMutationOptions, useQueryClient } from "@tanstack/react-query";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserSchema } from "@workspace/schemas";
import { QueryError, useAxiosInstance } from "../util";



type Options = UseMutationOptions<
  z.output<typeof UserSchema>,
  QueryError,
  void
> & {
  queryKeyInvalidation?: string[] | ((response: z.output<typeof UserSchema> | undefined) => string[]);
};

export const useCreateUserMutation = (options: Except<Options, "onSettled" | "mutationFn"> = {}) => {
  const axios = useAxiosInstance();
  const { queryKeyInvalidation } = options;

  const url = "/users";
  const client = useQueryClient();

  return useMutation({
    mutationFn: async () => {
      const response = await axios.post(url);

      return UserSchema.parse(response.data);
    },
    onSettled: (response) => {
      const invalidationKeys = typeof queryKeyInvalidation === "function"
        ? queryKeyInvalidation(response)
        : queryKeyInvalidation;

      if (invalidationKeys) {
        client.invalidateQueries({ queryKey: invalidationKeys });
        return;
      }

      const queryKeys = url
        .split("/")
        .filter(Boolean)
        .slice(0, -1);

      client.invalidateQueries({ queryKey: queryKeys });
    },
    ...options,
  });
};"
`;

exports[`createMutationFile > mutation-with-body (body only) > produces the correct output 1`] = `
"// ------------------------------
// Auto-generated mutation file for POST /users
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { useMutation, UseMutationOptions, useQueryClient } from "@tanstack/react-query";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserSchema, CreateUserBodySchema } from "@workspace/schemas";
import { QueryError, useAxiosInstance } from "../util";




type CreateUserMutationInput = {
  body: z.output<typeof CreateUserBodySchema>;
};

type Options = UseMutationOptions<
  z.output<typeof UserSchema>,
  QueryError,
  CreateUserMutationInput
> & {
  queryKeyInvalidation?: string[] | ((response: z.output<typeof UserSchema> | undefined) => string[]);
};

export const useCreateUserMutation = (options: Except<Options, "onSettled" | "mutationFn"> = {}) => {
  const axios = useAxiosInstance();
  const { queryKeyInvalidation } = options;

  const url = "/users";
  const client = useQueryClient();

  return useMutation({
    mutationFn: async ({ body }: CreateUserMutationInput) => {
      const response = await axios.post(url, body);

      return UserSchema.parse(response.data);
    },
    onSettled: (response) => {
      const invalidationKeys = typeof queryKeyInvalidation === "function"
        ? queryKeyInvalidation(response)
        : queryKeyInvalidation;

      if (invalidationKeys) {
        client.invalidateQueries({ queryKey: invalidationKeys });
        return;
      }

      const queryKeys = url
        .split("/")
        .filter(Boolean)
        .slice(0, -1);

      client.invalidateQueries({ queryKey: queryKeys });
    },
    ...options,
  });
};"
`;

exports[`createMutationFile > mutation-with-body-and-params > produces the correct output 1`] = `
"// ------------------------------
// Auto-generated mutation file for PUT /users/:id
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { useMutation, UseMutationOptions, useQueryClient } from "@tanstack/react-query";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserSchema, UpdateUserBodySchema, UserParamsSchema } from "@workspace/schemas";
import { injectParams, QueryError, useAxiosInstance } from "../util";





type UpdateUserMutationInput = {
  params: z.output<typeof UserParamsSchema>;
  body: z.output<typeof UpdateUserBodySchema>;
};

type Options = UseMutationOptions<
  z.output<typeof UserSchema>,
  QueryError,
  UpdateUserMutationInput
> & {
  queryKeyInvalidation?: string[] | ((response: z.output<typeof UserSchema> | undefined) => string[]);
};

export const useUpdateUserMutation = (options: Except<Options, "onSettled" | "mutationFn"> = {}) => {
  const axios = useAxiosInstance();
  const { queryKeyInvalidation } = options;

  const url = "/users/:id";
  const client = useQueryClient();

  return useMutation({
    mutationFn: async ({ params, body }: UpdateUserMutationInput) => {
      const urlWithParams = injectParams(url, UserParamsSchema, params);
      const response = await axios.put(urlWithParams, body);

      return UserSchema.parse(response.data);
    },
    onSettled: (response, _error, variables) => {
      const invalidationKeys = typeof queryKeyInvalidation === "function"
        ? queryKeyInvalidation(response)
        : queryKeyInvalidation;

      if (invalidationKeys) {
        client.invalidateQueries({ queryKey: invalidationKeys });
        return;
      }

      const queryKeys = injectParams(url, UserParamsSchema, variables.params)
        .split("/")
        .filter(Boolean)
        .slice(0, -1);

      client.invalidateQueries({ queryKey: queryKeys });
    },
    ...options,
  });
};"
`;

exports[`createMutationFile > mutation-with-params (params only) > produces the correct output 1`] = `
"// ------------------------------
// Auto-generated mutation file for DELETE /users/:id
// This file is generated by Route Ink. Do not edit manually.
// ------------------------------
import { useMutation, UseMutationOptions, useQueryClient } from "@tanstack/react-query";
import { Except } from "type-fest";
import z from "zod/v4";
import { UserParamsSchema } from "@workspace/schemas";
import { injectParams, QueryError, useAxiosInstance } from "../util";




type DeleteUserMutationInput = {
  params: z.output<typeof UserParamsSchema>;
};

type Options = UseMutationOptions<
  undefined,
  QueryError,
  DeleteUserMutationInput
> & {
  queryKeyInvalidation?: string[] | ((response: undefined | undefined) => string[]);
};

export const useDeleteUserMutation = (options: Except<Options, "onSettled" | "mutationFn"> = {}) => {
  const axios = useAxiosInstance();
  const { queryKeyInvalidation } = options;

  const url = "/users/:id";
  const client = useQueryClient();

  return useMutation({
    mutationFn: async ({ params }: DeleteUserMutationInput) => {
      const urlWithParams = injectParams(url, UserParamsSchema, params);
      await axios.delete(urlWithParams);

      return undefined;
    },
    onSettled: (response, _error, variables) => {
      const invalidationKeys = typeof queryKeyInvalidation === "function"
        ? queryKeyInvalidation(response)
        : queryKeyInvalidation;

      if (invalidationKeys) {
        client.invalidateQueries({ queryKey: invalidationKeys });
        return;
      }

      const queryKeys = injectParams(url, UserParamsSchema, variables.params)
        .split("/")
        .filter(Boolean)
        .slice(0, -1);

      client.invalidateQueries({ queryKey: queryKeys });
    },
    ...options,
  });
};"
`;
